--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -146,11 +146,13 @@
             >
     
             <TextView
+                android:id="@+id/album"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/AudioPlayerTextStyle"
                 android:text="@string/album"
                 android:layout_marginStart="16dp"
+                android:layout_marginEnd="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -163,6 +165,8 @@
                 tools:text="Yesterday (Remastered 2009)"
                 style="@style/AudioPlayerTextStyle"
                 android:layout_marginEnd="16dp"
+                android:layout_marginStart="10dp"
+                android:ellipsize="end"
                 android:textColor="@color/content_settings_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -235,7 +239,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginBottom="50dp"
-            android:clickable="true"
+            android:enabled="false"
             android:padding="8dp"
             android:scaleType="centerCrop"
             android:src="@drawable/play_button"
