--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.SettingsActivity"
+    tools:context="playlist.settings.ui.activity.SettingsActivity"
     android:id="@+id/settings"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/activity_background"
